--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.container {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .inputs-container {
   display: flex;  
   justify-content: space-evenly;
@@ -18,6 +25,16 @@ body {
   @media only screen and (max-width: 600px) {
     width: 40%;
   }
+}
+
+.unfollowers {
+  margin-top: 20px;
+  padding: 10px;
+  text-align: center;
+}
+
+.download {
+  text-align: center;
 }
 
 h1 {
@@ -46,10 +63,4 @@ input[type="file"] {
   margin-top:2px;
   padding: 5px;
   width: 100%;
-}
-
-#result {
-  margin-top: 20px;
-  padding: 10px;
-  text-align: center;
 }
