--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -12,7 +12,7 @@ body {
 }
 
 .inputs {
-  display: flex;  
+  display: flex;
   justify-content: space-evenly;
   margin-bottom: 24px;
   width: 52%;
@@ -21,7 +21,7 @@ body {
   }
 }
 
-.input{
+.input {
   @media only screen and (max-width: 600px) {
     width: 40%;
   }
