add link to header

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.header {
+  text-decoration: none;
+}
+
 .container {
   align-content: center;
   display: flex;
