--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
 
 .container {
   align-content: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,8 +64,8 @@ body {
   }
 }
 
-.download {
-  text-align: center;
+.footer-link {
+  max-width: fit-content;
 }
 
 .unfollower {
@@ -95,6 +96,7 @@ form {
   align-items: center;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 label {
